yamls/svc-lorem.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lorem-service
spec:
  type: NodePort
  selector:
    app: lorem
  ports:
    - port: 3000
      targetPort: 80
