yamls/ingress-lorem.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-lorem
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: lorem-service
          servicePort: 3000
